--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
   <body>
     <div class="navbar">
       <ul class="navlinks">
-        <li><a class="active" onClick="showSect(0)">Home</a></li>
+        <li><a class="inactive" onClick="showSect(0)">Home</a></li>
         <li><a class="inactive" onClick="showSect(1)">About</a></li>
         <li><a class="inactive" onClick="showSect(2)">My Projects</a></li>
         <li><a class="inactive" onClick="showSect(3)">Reach Me</a></li>
       </ul>
     </div>
-    <div class="cover">
       <section class="intro">
         <div class="name">
           <h1><span style="color: red">I'</span>m</h1>
@@ -28,7 +27,6 @@
           <br />
           <h1>Prathamesh</h1>
         </div>
-        
         <br />
         <br>
         <p class="attr">Beginner Programmer</p>
@@ -44,7 +42,7 @@
       <section class="proj">
         <p>
           These are the Projects developed by me from the scratch and with some
-          help of <a href="https://stackoverflow.com/ target="_blank"> StackOverflow </a>😜.
+          help of <a href="https://stackoverflow.com/" target="_blank"> StackOverflow </a>😜.
         </p>
         <div class="projectContainer">
           <a
@@ -98,8 +96,7 @@
             alt=""
             style="filter: invert()"
         /></a>
-      </div>
-    </div>
+             </div>
 
     <script src="./script.js"></script>
   </body>
