--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="navbar">
       <ul class="navlinks">
-        <li><a class="inactive" onClick="showSect(0)">Home</a></li>
+        <li><a class="active" onClick="showSect(0)">Home</a></li>
         <li><a class="inactive" onClick="showSect(1)">About</a></li>
         <li><a class="inactive" onClick="showSect(2)">My Projects</a></li>
         <li><a class="inactive" onClick="showSect(3)">Reach Me</a></li>
