--- a/index.html
+++ b/index.html
@@ -23,12 +23,9 @@
       <section class="intro">
         <div class="name">
           <h1><span style="color: red">I'</span>m</h1>
-          <br />
-          <br />
+          <br>
           <h1>Prathamesh</h1>
         </div>
-        <br />
-        <br>
         <p class="attr">Beginner Programmer</p>
       </section>
       <section class="about">
@@ -78,6 +75,7 @@
             height="50px"
             width="50px"
             alt=""
+            onclick="copyID()"
           />
           <p id="disId" style="font-size: 13px">quickersilver#3149</p>
         </div>
@@ -94,7 +92,6 @@
             height="50px"
             width="50px"
             alt=""
-            style="filter: invert()"
         /></a>
              </div>
 
