--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <section class="proj">
         <p>
           These are the Projects developed by me from the scratch and with some
-          help of <a href="https://stackoverflow.com/" target="_blank"> StackOverflow </a>😜.
+          help of StackOverflow😜.
         </p>
         <div class="projectContainer">
           <a
