--- a/index.html
+++ b/index.html
@@ -5,44 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prathamesh More</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
     <link rel="icon" href="./assets/identicon.png" />
   </head>
+
   <body>
-    <div class="navbar">
-      <ul class="navlinks">
-        <li><a class="active" onClick="showSect(0)">Home</a></li>
-        <li><a class="inactive" onClick="showSect(1)">About</a></li>
-        <li><a class="inactive" onClick="showSect(2)">My Projects</a></li>
-        <li><a class="inactive" onClick="showSect(3)">Reach Me</a></li>
-      </ul>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#about">About</a>
+      <a href="#project">My Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+    <div id="home">
+      <div class="name">
+        <h1><span style="color: red">I'</span>m</h1>
+        <h1>Prathamesh</h1>
+      </div>
+      <br />
+      <p class="attr">Beginner Programmer</p>
     </div>
-      <section class="intro">
-        <div class="name">
-          <h1><span style="color: red">I'</span>m</h1>
-          <br>
-          <h1>Prathamesh</h1>
-        </div>
-        <p class="attr">Beginner Programmer</p>
-      </section>
-      <section class="about">
-        <p>
-          A Computer Science Student. I know html, css and some javaScript. I
-          also know some Python and Java. I want to make career in Web
-          Development, Android Development or if possible in developing games
-          too. As I am a Beginner, so don't judge me from the colors given.
-        </p>
-      </section>
-      <section class="proj">
-        <p>
-          These are the Projects developed by me from the scratch and with some
-          help of StackOverflow😜.
-        </p>
-        <div class="projectContainer">
-          <a
+    <div id="about">
+      <img class="svg" src="./assets/coding.svg" alt="Programmer" />
+      <p>
+        A Computer Science Student. I know html, css and some javaScript. I also
+        know some Python and Java. I want to make career in Web Development,
+        Android Development or if possible in developing games too. I like
+        listening to Pop music.
+      </p>
+    </div>
+    <div id="project">
+      <p>
+        These are the Projects developed by me from scratch and with some help
+        of StackOverflow😜.
+      </p>
+      <div class="projectContainer">
+        <a
           href="https://prathameshmm02.github.io/Image-Carousel/"
           class="project"
           target="_blank"
@@ -60,25 +61,20 @@
           target="_blank"
           >Tic Tac Toe</a
         >
-        </div>
-        
-      </section>
-      <section class="reachMe">
-        <p>You can reach me from the links given below.</p>
-      </section>
-
-      <hr />
-      <div class="contact">
-        <div class="discord">
-          <img
+      </div>
+    </div>
+    <div id="contact">
+      <p>You can reach me from the links given below.</p>
+      <img class="svg" src="./assets/contact.svg" alt="Contact" />
+      <div class="links">
+        <a
+          ><img
             src="./assets/Discord-Logo.png"
             height="50px"
             width="50px"
             alt=""
-            onclick="copyID()"
-          />
-          <p id="disId" style="font-size: 13px">quickersilver#3149</p>
-        </div>
+        /></a>
+
         <a href="https://t.me/quickersilver" target="_blank"
           ><img
             src="./assets/telegram-logo.png"
@@ -93,8 +89,7 @@
             width="50px"
             alt=""
         /></a>
-             </div>
-
-    <script src="./script.js"></script>
+      </div>
+    </div>
   </body>
 </html>
