--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <a href="#contact">Contact</a>
     </nav>
     <div id="home">
+      <img src="./assets/circle.svg" alt="">
       <div class="name">
         <h1><span style="color: red">I'</span>m</h1>
         <h1>Prathamesh</h1>
@@ -29,7 +30,7 @@
       <p class="attr">Beginner Programmer</p>
     </div>
     <div id="about">
-      <img class="svg" src="./assets/coding.svg" alt="Programmer" />
+    <img class="svg" src="./assets/coding.svg" alt="Programmer" width="901px" height="787px">
       <p>
         A Computer Science Student. I know html, css and some javaScript. I also
         know some Python and Java. I want to make career in Web Development,
@@ -65,7 +66,8 @@
     </div>
     <div id="contact">
       <p>You can reach me from the links given below.</p>
-      <img class="svg" src="./assets/contact.svg" alt="Contact" />
+
+      <img class="svg" src="./assets/contact.svg" alt="Contact" width="1096px" height="578px"/>
       <div class="links">
         <a
           ><img
