Made Some Changes

--- a/index.html
+++ b/index.html
@@ -21,12 +21,23 @@
       <a href="#contact">Contact</a>
     </nav>
     <div id="home">
-      <div class="name">
+      <button class="switch">
+        Switch
+      </button>
+      <div class="intro">
         <h1><span style="color: red">I'</span>m</h1>
         <h1>Prathamesh</h1>
+        <br />
+        <p class="attr">Beginner Programmer</p>
       </div>
-      <br />
-      <p class="attr">Beginner Programmer</p>
+      <div class="another-intro">
+        <div class="top"></div>
+        <div class="main">
+          <h1>Hello There👋</h1>
+          <h1><span style="color: red">I'</span>m Prathamesh</h1>
+        </div>
+        <div class="bottom"></div>
+      </div>
     </div>
     <div id="about">
     <img class="svg" src="./assets/coding.svg" alt="Programmer" width="901px" height="787px">
@@ -92,5 +103,6 @@
         /></a>
       </div>
     </div>
+    <script src="./animation.js"></script>
   </body>
 </html>
