--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
       <a href="#contact">Contact</a>
     </nav>
     <div id="home">
-      <button class="switch">
-        Switch
-      </button>
+      <button class="switch">Switch</button>
       <div class="intro">
         <h1><span style="color: red">I'</span>m</h1>
         <h1>Prathamesh</h1>
@@ -40,7 +38,13 @@
       </div>
     </div>
     <div id="about">
-    <img class="svg" src="./assets/coding.svg" alt="Programmer" width="901px" height="787px">
+      <img
+        class="svg"
+        src="./assets/coding.svg"
+        alt="Programmer"
+        width="901px"
+        height="787px"
+      />
       <p>
         A Computer Science Student. I know html, css and some javaScript. I also
         know some Python and Java. I want to make career in Web Development,
@@ -76,17 +80,22 @@
     </div>
     <div id="contact">
       <p>You can reach me from the links given below.</p>
-
-      <img class="svg" src="./assets/contact.svg" alt="Contact" width="1096px" height="578px"/>
+      <img
+        class="svg"
+        src="./assets/contact.svg"
+        alt="Contact"
+        width="1096px"
+        height="578px"
+      />
       <div class="links">
-        <a
+        <a onclick="copyId()"
           ><img
             src="./assets/Discord-Logo.png"
             height="50px"
             width="50px"
             alt=""
-        /></a>
-
+        /><p id="successCopy">ID Copied</p></a>
+        
         <a href="https://t.me/quickersilver" target="_blank"
           ><img
             src="./assets/telegram-logo.png"
