--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="top"></div>
         <div class="main">
           <h1>Hello There👋</h1>
-          <h1><span style="color: red">I'</span>m Prathamesh</h1>
+          <h1><span style="color: red">I'</span>m tryhtr</h1>
         </div>
         <div class="bottom"></div>
       </div>
@@ -94,8 +94,10 @@
             height="50px"
             width="50px"
             alt=""
-        /><p id="successCopy">ID Copied</p></a>
-        
+          />
+          <p id="successCopy">ID Copied</p></a
+        >
+
         <a href="https://t.me/quickersilver" target="_blank"
           ><img
             src="./assets/telegram-logo.png"
