--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="prathameshmm02, Prathamesh More, Programmer"
+    />
+    <meta name="description" content="Prathamesh - A Beginner Programmer" />
     <title>Prathamesh More</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -10,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
+
     <link rel="icon" href="./assets/identicon.png" />
   </head>
 
@@ -32,7 +38,7 @@
         <div class="top"></div>
         <div class="main">
           <h1>Hello There👋</h1>
-          <h1><span style="color: red">I'</span>m tryhtr</h1>
+          <h1><span style="color: red">I'</span>m Prathamesh</h1>
         </div>
         <div class="bottom"></div>
       </div>
